# sysmap

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  hatch_build.py  pyproject.toml
docs/: language-support.md  layer-1-codebase-map.md
docs/superpowers/specs/: 2026-07-13-map-visual-round-1-design.md  2026-07-14-detail-panel-design.md  2026-07-16-depth-design.md
engine/: descend.py  describe.py  env.py  extract.py  grouping.py  map.py  naming.py  signals.py  subsystem_graph.py
experiments/clustering-comparison/: .gitignore  README.md  run.py
experiments/clustering-comparison/src/: dense_signals.py  methods.py  naming.py  report.py  signals.py  subsystem_graph.py
server/: README.md  app.py
sysmap/: cli.py
sysmap/engine/: cache.py  descend.py  describe.py  env.py  extract.py  map.py  naming.py  signals.py  subsystem_graph.py  voice.py
sysmap/server/: app.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  CodeView.tsx  ConnectionEdge.tsx  DetailCard.tsx  DetailPanel.tsx  ExitBox.tsx  GhostBox.tsx  MapView.tsx  SubsystemBox.tsx  api.ts  highlight.ts  index.css  layout.ts  types.ts
